tests/tests/snapshots/golden__ir__domain-orders.snap
---
source: tests/tests/golden.rs
expression: json
---
{
  "name": "DomainOrders",
  "multi_service": false,
  "services": [
    {
      "id": 0,
      "name": "DomainOrders"
    }
  ],
  "nodes": [
    {
      "id": 0,
      "service": 0,
      "kind": "Database",
      "name": "default",
      "engine": "Postgres"
    },
    {
      "id": 1,
      "service": 0,
      "kind": "Api",
      "name": "CreateCustomerRoute",
      "request": 0,
      "config": {
        "method": "Post",
        "path": "/customers",
        "scope": null
      }
    },
    {
      "id": 2,
      "service": 0,
      "kind": "Api",
      "name": "Checkout",
      "request": 1,
      "config": {
        "method": "Post",
        "path": "/orders",
        "scope": null
      }
    },
    {
      "id": 3,
      "service": 0,
      "kind": "Api",
      "name": "Items",
      "request": 3,
      "config": {
        "method": "Post",
        "path": "/line-items",
        "scope": null
      }
    },
    {
      "id": 4,
      "service": 0,
      "kind": "Api",
      "name": "UpdateOrderRoute",
      "request": 1,
      "config": {
        "method": "Post",
        "path": "/orders/update",
        "scope": null
      }
    },
    {
      "id": 5,
      "service": 0,
      "kind": "Api",
      "name": "DeleteOrderRoute",
      "request": 5,
      "config": {
        "method": "Post",
        "path": "/orders/delete",
        "scope": null
      }
    },
    {
      "id": 6,
      "service": 0,
      "kind": "Api",
      "name": "CountOrdersRoute",
      "request": 6,
      "config": {
        "method": "Post",
        "path": "/orders/count",
        "scope": null
      }
    },
    {
      "id": 7,
      "service": 0,
      "kind": "Service",
      "name": "CreateCustomer",
      "signature": {
        "params": [
          [
            "c",
            {
              "Record": 0
            }
          ]
        ],
        "return_ty": {
          "Record": 0
        },
        "locals": [
          {
            "Record": 0
          }
        ],
        "body": [
          {
            "Expr": {
              "VerbCall": {
                "capability": 0,
                "verb": {
                  "DbInsert": 0
                },
                "args": [
                  {
                    "Local": {
                      "slot": 0,
                      "ty": {
                        "Record": 0
                      }
                    }
                  }
                ],
                "ty": {
                  "Record": 0
                }
              }
            }
          },
          {
            "Return": {
              "Local": {
                "slot": 0,
                "ty": {
                  "Record": 0
                }
              }
            }
          }
        ]
      }
    },
    {
      "id": 8,
      "service": 0,
      "kind": "Service",
      "name": "PlaceOrder",
      "signature": {
        "params": [
          [
            "order",
            {
              "Record": 1
            }
          ]
        ],
        "return_ty": {
          "Record": 1
        },
        "locals": [
          {
            "Record": 1
          }
        ],
        "body": [
          {
            "Transaction": {
              "body": [
                {
                  "Expr": {
                    "VerbCall": {
                      "capability": 0,
                      "verb": {
                        "DbInsert": 1
                      },
                      "args": [
                        {
                          "Local": {
                            "slot": 0,
                            "ty": {
                              "Record": 1
                            }
                          }
                        }
                      ],
                      "ty": {
                        "Record": 1
                      }
                    }
                  }
                },
                {
                  "Expr": {
                    "If": {
                      "cond": {
                        "Binary": {
                          "op": "Lt",
                          "lhs": {
                            "FieldAccess": {
                              "base": {
                                "Local": {
                                  "slot": 0,
                                  "ty": {
                                    "Record": 1
                                  }
                                }
                              },
                              "field": "total",
                              "ty": "Float"
                            }
                          },
                          "rhs": {
                            "FloatLit": 0.0
                          },
                          "ty": "Bool"
                        }
                      },
                      "then_branch": [
                        {
                          "Fail": {
                            "error": 4,
                            "args": [
                              {
                                "StrLit": "order total must not be negative"
                              }
                            ]
                          }
                        }
                      ],
                      "else_branch": [],
                      "ty": "Unit"
                    }
                  }
                },
                {
                  "Expr": {
                    "VerbCall": {
                      "capability": 0,
                      "verb": {
                        "DbInsert": 2
                      },
                      "args": [
                        {
                          "RecordCons": {
                            "record": 2,
                            "base_value": null,
                            "fields": [
                              [
                                "id",
                                {
                                  "BuiltinCall": "UuidNew"
                                }
                              ],
                              [
                                "note",
                                {
                                  "StrLit": "order placed"
                                }
                              ],
                              [
                                "total",
                                {
                                  "FieldAccess": {
                                    "base": {
                                      "Local": {
                                        "slot": 0,
                                        "ty": {
                                          "Record": 1
                                        }
                                      }
                                    },
                                    "field": "total",
                                    "ty": "Float"
                                  }
                                }
                              ]
                            ]
                          }
                        }
                      ],
                      "ty": {
                        "Record": 2
                      }
                    }
                  }
                }
              ]
            }
          },
          {
            "Return": {
              "Local": {
                "slot": 0,
                "ty": {
                  "Record": 1
                }
              }
            }
          }
        ]
      }
    },
    {
      "id": 9,
      "service": 0,
      "kind": "Service",
      "name": "AddLineItem",
      "signature": {
        "params": [
          [
            "item",
            {
              "Record": 3
            }
          ]
        ],
        "return_ty": {
          "Record": 3
        },
        "locals": [
          {
            "Record": 3
          }
        ],
        "body": [
          {
            "Expr": {
              "VerbCall": {
                "capability": 0,
                "verb": {
                  "DbInsert": 3
                },
                "args": [
                  {
                    "Local": {
                      "slot": 0,
                      "ty": {
                        "Record": 3
                      }
                    }
                  }
                ],
                "ty": {
                  "Record": 3
                }
              }
            }
          },
          {
            "Return": {
              "Local": {
                "slot": 0,
                "ty": {
                  "Record": 3
                }
              }
            }
          }
        ]
      }
    },
    {
      "id": 10,
      "service": 0,
      "kind": "Service",
      "name": "UpdateOrderTotal",
      "signature": {
        "params": [
          [
            "order",
            {
              "Record": 1
            }
          ]
        ],
        "return_ty": {
          "Record": 1
        },
        "locals": [
          {
            "Record": 1
          }
        ],
        "body": [
          {
            "Expr": {
              "VerbCall": {
                "capability": 0,
                "verb": {
                  "DbUpdate": 1
                },
                "args": [
                  {
                    "FieldAccess": {
                      "base": {
                        "Local": {
                          "slot": 0,
                          "ty": {
                            "Record": 1
                          }
                        }
                      },
                      "field": "id",
                      "ty": "Uuid"
                    }
                  },
                  {
                    "Local": {
                      "slot": 0,
                      "ty": {
                        "Record": 1
                      }
                    }
                  }
                ],
                "ty": {
                  "Option": {
                    "Record": 1
                  }
                }
              }
            }
          },
          {
            "Return": {
              "Local": {
                "slot": 0,
                "ty": {
                  "Record": 1
                }
              }
            }
          }
        ]
      }
    },
    {
      "id": 11,
      "service": 0,
      "kind": "Service",
      "name": "DeleteOrder",
      "signature": {
        "params": [
          [
            "payload",
            {
              "Record": 5
            }
          ]
        ],
        "return_ty": {
          "Record": 7
        },
        "locals": [
          {
            "Record": 5
          },
          "Bool"
        ],
        "body": [
          {
            "Let": {
              "slot": 1,
              "value": {
                "VerbCall": {
                  "capability": 0,
                  "verb": {
                    "DbDelete": 1
                  },
                  "args": [
                    {
                      "FieldAccess": {
                        "base": {
                          "Local": {
                            "slot": 0,
                            "ty": {
                              "Record": 5
                            }
                          }
                        },
                        "field": "id",
                        "ty": "Uuid"
                      }
                    }
                  ],
                  "ty": "Bool"
                }
              }
            }
          },
          {
            "Return": {
              "RecordCons": {
                "record": 7,
                "base_value": null,
                "fields": [
                  [
                    "deleted",
                    {
                      "Local": {
                        "slot": 1,
                        "ty": "Bool"
                      }
                    }
                  ]
                ]
              }
            }
          }
        ]
      }
    },
    {
      "id": 12,
      "service": 0,
      "kind": "Service",
      "name": "CountOrders",
      "signature": {
        "params": [
          [
            "filter",
            {
              "Record": 6
            }
          ]
        ],
        "return_ty": "Int",
        "locals": [
          {
            "Record": 6
          }
        ],
        "body": [
          {
            "Return": {
              "Query": {
                "capability": 0,
                "verb": {
                  "DbCount": 1
                },
                "predicate": {
                  "terms": [
                    {
                      "field": "total",
                      "field_ty": "Float",
                      "op": "GtEq",
                      "value": {
                        "FieldAccess": {
                          "base": {
                            "Local": {
                              "slot": 0,
                              "ty": {
                                "Record": 6
                              }
                            }
                          },
                          "field": "min_total",
                          "ty": "Float"
                        }
                      }
                    }
                  ]
                },
                "ty": "Int"
              }
            }
          }
        ]
      }
    }
  ],
  "edges": [
    {
      "id": 0,
      "from": 7,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 1,
      "from": 1,
      "to": 7,
      "kind": "RequestFlow"
    },
    {
      "id": 2,
      "from": 8,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 3,
      "from": 2,
      "to": 8,
      "kind": "RequestFlow"
    },
    {
      "id": 4,
      "from": 9,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 5,
      "from": 3,
      "to": 9,
      "kind": "RequestFlow"
    },
    {
      "id": 6,
      "from": 10,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 7,
      "from": 4,
      "to": 10,
      "kind": "RequestFlow"
    },
    {
      "id": 8,
      "from": 11,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 9,
      "from": 5,
      "to": 11,
      "kind": "RequestFlow"
    },
    {
      "id": 10,
      "from": 12,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 11,
      "from": 6,
      "to": 12,
      "kind": "RequestFlow"
    }
  ],
  "records": [
    {
      "name": "Customer",
      "fields": [
        {
          "name": "id",
          "ty": {
            "type": "Uuid"
          }
        },
        {
          "name": "name",
          "ty": {
            "type": "Str"
          }
        },
        {
          "name": "email",
          "ty": {
            "type": "Str"
          }
        }
      ],
      "kind": "Data"
    },
    {
      "name": "Order",
      "fields": [
        {
          "name": "id",
          "ty": {
            "type": "Uuid"
          }
        },
        {
          "name": "customer",
          "ty": {
            "type": "Reference",
            "target": 0,
            "table": 0,
            "cardinality": "One",
            "on_delete": "Restrict",
            "on_update": "Cascade",
            "unique": false
          }
        },
        {
          "name": "total",
          "ty": {
            "type": "Float"
          }
        }
      ],
      "kind": "Data"
    },
    {
      "name": "OrderAudit",
      "fields": [
        {
          "name": "id",
          "ty": {
            "type": "Uuid"
          }
        },
        {
          "name": "note",
          "ty": {
            "type": "Str"
          }
        },
        {
          "name": "total",
          "ty": {
            "type": "Float"
          }
        }
      ],
      "kind": "Data"
    },
    {
      "name": "LineItem",
      "fields": [
        {
          "name": "id",
          "ty": {
            "type": "Uuid"
          }
        },
        {
          "name": "order",
          "ty": {
            "type": "Reference",
            "target": 1,
            "table": 1,
            "cardinality": "One",
            "on_delete": "Cascade",
            "on_update": "Cascade",
            "unique": true
          }
        },
        {
          "name": "sku",
          "ty": {
            "type": "Str"
          }
        },
        {
          "name": "quantity",
          "ty": {
            "type": "Int"
          }
        }
      ],
      "kind": "Data"
    },
    {
      "name": "InvalidOrder",
      "fields": [
        {
          "name": "reason",
          "ty": {
            "type": "Str"
          }
        }
      ],
      "kind": "Error"
    },
    {
      "name": "IdOnly",
      "fields": [
        {
          "name": "id",
          "ty": {
            "type": "Uuid"
          }
        }
      ],
      "kind": "Data"
    },
    {
      "name": "OrderCountFilter",
      "fields": [
        {
          "name": "min_total",
          "ty": {
            "type": "Float"
          }
        }
      ],
      "kind": "Data"
    },
    {
      "name": "DeleteResult",
      "fields": [
        {
          "name": "deleted",
          "ty": {
            "type": "Bool"
          }
        }
      ],
      "kind": "Data"
    }
  ],
  "tables": [
    {
      "name": "Customers",
      "record": 0,
      "service": 0,
      "db_instance": 0
    },
    {
      "name": "Orders",
      "record": 1,
      "service": 0,
      "db_instance": 0
    },
    {
      "name": "OrderAudits",
      "record": 2,
      "service": 0,
      "db_instance": 0
    },
    {
      "name": "LineItems",
      "record": 3,
      "service": 0,
      "db_instance": 0
    }
  ],
  "pipelines": [
    {
      "name": "CreateCustomerRoute",
      "service": 0,
      "owner": 1,
      "payload": 0,
      "steps": [
        {
          "step": "Handler",
          "node": 7
        },
        {
          "step": "Return"
        }
      ]
    },
    {
      "name": "Checkout",
      "service": 0,
      "owner": 2,
      "payload": 1,
      "steps": [
        {
          "step": "Handler",
          "node": 8
        },
        {
          "step": "Return"
        }
      ]
    },
    {
      "name": "Items",
      "service": 0,
      "owner": 3,
      "payload": 3,
      "steps": [
        {
          "step": "Handler",
          "node": 9
        },
        {
          "step": "Return"
        }
      ]
    },
    {
      "name": "UpdateOrderRoute",
      "service": 0,
      "owner": 4,
      "payload": 1,
      "steps": [
        {
          "step": "Handler",
          "node": 10
        },
        {
          "step": "Return"
        }
      ]
    },
    {
      "name": "DeleteOrderRoute",
      "service": 0,
      "owner": 5,
      "payload": 5,
      "steps": [
        {
          "step": "Handler",
          "node": 11
        },
        {
          "step": "Return"
        }
      ]
    },
    {
      "name": "CountOrdersRoute",
      "service": 0,
      "owner": 6,
      "payload": 6,
      "steps": [
        {
          "step": "Handler",
          "node": 12
        },
        {
          "step": "Return"
        }
      ]
    }
  ],
  "resources": [],
  "event_streams": []
}
