tests/tests/snapshots/golden__ir__event-pipeline.snap
---
source: tests/tests/golden.rs
expression: json
---
{
  "name": "Ingest",
  "services": [
    {
      "id": 0,
      "name": "Ingest"
    }
  ],
  "nodes": [
    {
      "id": 0,
      "service": 0,
      "kind": "Database",
      "name": "default",
      "engine": "Postgres"
    },
    {
      "id": 1,
      "service": 0,
      "kind": "Queue",
      "name": "default",
      "engine": "Nats"
    },
    {
      "id": 2,
      "service": 0,
      "kind": "Api",
      "name": "Submit",
      "request": null,
      "config": {
        "method": "Post",
        "path": null,
        "scope": null
      }
    },
    {
      "id": 3,
      "service": 0,
      "kind": "Worker",
      "name": "Processor",
      "config": {
        "concurrency": 1,
        "max_retries": 0
      }
    },
    {
      "id": 4,
      "service": null,
      "kind": "Stream",
      "name": "PageView",
      "subject": "ingest.page_view",
      "record": null
    },
    {
      "id": 5,
      "service": 0,
      "kind": "Worker",
      "name": "PageViewConsumer",
      "config": {
        "concurrency": 1,
        "max_retries": 0
      }
    },
    {
      "id": 6,
      "service": 0,
      "kind": "Service",
      "name": "Validate"
    },
    {
      "id": 7,
      "service": null,
      "kind": "Stream",
      "name": "Events",
      "subject": "ingest.events",
      "record": null
    },
    {
      "id": 8,
      "service": 0,
      "kind": "Service",
      "name": "Enrich"
    },
    {
      "id": 9,
      "service": 0,
      "kind": "Service",
      "name": "Store"
    }
  ],
  "edges": [
    {
      "id": 0,
      "from": 4,
      "to": 1,
      "kind": "DependsOn"
    },
    {
      "id": 1,
      "from": 4,
      "to": 5,
      "kind": "AsyncMessage"
    },
    {
      "id": 2,
      "from": 5,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 3,
      "from": 6,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 4,
      "from": 7,
      "to": 1,
      "kind": "DependsOn"
    },
    {
      "id": 5,
      "from": 2,
      "to": 6,
      "kind": "RequestFlow"
    },
    {
      "id": 6,
      "from": 6,
      "to": 7,
      "kind": "AsyncMessage"
    },
    {
      "id": 7,
      "from": 7,
      "to": 3,
      "kind": "AsyncMessage"
    },
    {
      "id": 8,
      "from": 8,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 9,
      "from": 9,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 10,
      "from": 3,
      "to": 8,
      "kind": "RequestFlow"
    },
    {
      "id": 11,
      "from": 8,
      "to": 9,
      "kind": "RequestFlow"
    }
  ],
  "records": [],
  "pipelines": [
    {
      "name": "Submit",
      "service": 0,
      "owner": 2,
      "payload": null,
      "steps": [
        {
          "step": "Handler",
          "node": 6
        },
        {
          "step": "Publish",
          "stream": 7
        },
        {
          "step": "Return"
        }
      ]
    },
    {
      "name": "Processor",
      "service": 0,
      "owner": 3,
      "payload": null,
      "steps": [
        {
          "step": "Handler",
          "node": 8
        },
        {
          "step": "Handler",
          "node": 9
        }
      ]
    }
  ],
  "resources": [],
  "event_streams": [
    {
      "name": "PageView",
      "service_owner": 0,
      "stream": 4,
      "worker": 5
    }
  ]
}
